# Jacobi_Rotation_CUDA

./: .gitignore  CMakeLists.txt  JacobiData.h  README.md  debug  devicequery.cu  log  main  matrix_GPU.cu  project.c  run.sh  syst_info.cu
.metadata/: version.ini
.metadata/.plugins/org.eclipse.cdt.core/: RemoteSystemsTempFiles.1525188497490.pdom
.metadata/.plugins/org.eclipse.cdt.make.core/: RemoteSystemsTempFiles.sc
.metadata/.plugins/org.eclipse.core.resources/: 2.snap
.metadata/.plugins/org.eclipse.core.resources/.projects/RemoteSystemsTempFiles/.indexes/: properties.index
.metadata/.plugins/org.eclipse.core.resources/.root/: 2.tree
.metadata/.plugins/org.eclipse.core.resources/.safetable/: org.eclipse.core.resources
.metadata/.plugins/org.eclipse.e4.workbench/: workbench.xmi
.metadata/.plugins/org.eclipse.rse.core/profiles/PRF.mehdi-asus_8/: node.properties
.metadata/.plugins/org.eclipse.ui.ide/: dialog_settings.xml
RemoteSystemsTempFiles/: .project
jacobi/: JacobiData.cpp  JacobiData.h  main.cpp  utils.h
jacobi-plain/: JacobiData.cpp  main  main.cu  utils.h
jacobi/cpu/: JacobiData.h  main.cpp  utils.h
jacobi/gpu/: JacobiData.cu  JacobiData.h  main  main.cu  run.sh  utils.h
logs/: stdout
oop_jacobi/cpu/: JacobiData.cpp
oop_jacobi/gpu/: JacobiData.cu  JacobiData.h  main  main.cu
src/: JacobiData.cu  JacobiData.h  constants.h  main.cu  main2.cu  set.cpp  utils.h
src/check/: test.py
src/debug/: .test.py.swp  debug  debug.cpp  debug2.cpp  test_values
src/v1/: project_V2.cu
(+3 files in other folders)
